# this is example-file: src/Makefile.am

# the program to build (the names of the final binaries)
bin_PROGRAMS = RNAdesign

# list of sources for the 'RNAdesign' binary
RNAdesign_SOURCES =	main.cc \
			common.cc \
			graphcommon.cc \
			printgraph.cc \
			decompose.cc \
			treestatistics.cc \
			parsestruct.cc \
			pathcoloring.cc \
			graphcoloring.cc

