# this is: src/Makefile.am

# the program to build (the names of the final binaries)
bin_PROGRAMS = RNAdesign

# list of sources for the 'RNAdesign' binary
RNAdesign_SOURCES =	main.cc \
			common.cc \
			graphcommon.cc \
			printgraph.cc \
			decompose.cc \
			parsestruct.cc \
			pathcoloring.cc \
			graphcoloring.cc \
			energy.cc \
			energy_optimization.cc
nodist_include_HEADERS = common.h \
			graphcoloring.h \
			main.h \
			pathcoloring.h \
			struct2graph.h \
			decompose.h \
			graphcommon.h \
			parsestruct.h \
			printgraph.h \
			energy.h \
			energy_optimization.h

